[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/playerShip3_green.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/ShootPlayer.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 41.6812

[node name="player" type="KinematicBody2D" index="0"]

z_index = 2
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]
projectile = null
health = 100

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.25
one_shot = false
autostart = false

[node name="death_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="audio" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]


